<resources>
    <string name="app_name">Talko</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">FaceBook</string>
    <string name="google">Google</string>
    <string name="sign_up_with_phone">Sign Up With Phone</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="want_to_sign_up">Want to sign up?</string>
    <string name="sign_in">sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="person">Person</string>
    <string name="type_your_message">Type your message</string>
</resources>