<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:gravity="center">

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="468dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ch" />

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:textColor="#0288D1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="#BA68C8"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/signed"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="right"
            android:text="@string/already_have_an_account"
            android:textColor="#82B1FF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="@string/sign_up"
            android:textSize="20sp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="73dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FAEEEE"
            android:drawableLeft="@drawable/ic_google"
            android:text="@string/google"
            android:textColor="#191818"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#F3EFEF"
            android:drawableLeft="@drawable/ic_facebook"
            android:text="@string/facebook"
            android:textColor="#100E0E"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="253dp"
        android:layout_height="72dp"
        android:gravity="center"
        android:text="@string/sign_up_with_phone"
        android:textColor="#FF80AB"
        android:textSize="20sp" />


</LinearLayout>