<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="339dp"
        android:layout_height="407dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ch" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#BA68C8"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#E040FB"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="right"
            android:text="@string/want_to_sign_up"
            android:textColor="#82B1FF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/sign_in"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="73dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FAEEEE"
            android:drawableLeft="@drawable/ic_google"
            android:text="@string/google"
            android:textColor="#191818"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#F3EFEF"
            android:drawableLeft="@drawable/ic_facebook"
            android:text="@string/facebook"
            android:textColor="#100E0E"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
